welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: value unary_! is not a member of Unit
  if(!arriver()){
     ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:12: warning: enclosing method arriver has result type Unit: return value discarded
      return true
      ^SnakeBuggle:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:15: warning: enclosing method arriver has result type Unit: return value discarded
  return false
  ^